--- a/rust/tree_node/Cargo.toml
+++ b/rust/tree_node/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "binary_tree_cameras"
+name = "tree_node"
 version = "0.1.0"
 authors = ["solomon <solomon.wzs@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-tree_node = { path = "../tree_node" }
