--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,7 +1,6 @@
 [workspace]
 
 members = [
-    "tree_node",
     "best_sightseeing_pair",
     "binary_tree_cameras",
     "distribute_coins_in_binary_tree",
@@ -13,7 +12,9 @@ members = [
     "number_of_squareful_arrays",
     "odd_even_jump",
     "partition_array_into_three_parts_with_equal_sum",
+    "recover_a_tree_from_preorder_traversal",
     "smallest_integer_divisible_by_k",
     "tallest_billboard",
+    "tree_node",
     "triples_with_bitwise_and_equal_to_zero",
 ]
