modified:   cpp/Makefile 	new file:   cpp/src/as_far_from_land_as_possible.cpp 	modified:   cpp/src/balanced_binary_tree.cpp 	modified:   cpp/src/best_time_to_buy_and_sell_stock.cpp 	modified:   cpp/src/best_time_to_buy_and_sell_stock_2.cpp 	modified:   cpp/src/best_time_to_buy_and_sell_stock_3.cpp 	modified:   cpp/src/binary_tree_inorder_traversal.cpp 	modified:   cpp/src/binary_tree_level_order_traversal.cpp 	modified:   cpp/src/binary_tree_level_order_traversal_2.cpp 	modified:   cpp/src/binary_tree_maximum_path_sum.cpp 	modified:   cpp/src/binary_tree_postorder_traversal.cpp 	modified:   cpp/src/binary_tree_preorder_traversal.cpp 	modified:   cpp/src/binary_tree_zigzag_level_order_traversal.cpp 	modified:   cpp/src/candy.cpp 	modified:   cpp/src/clone_graph.cpp 	modified:   cpp/src/construct_binary_tree_from_inorder_and_postorder_traversal.cpp 	modified:   cpp/src/construct_binary_tree_from_preorder_and_inorder_traversal.cpp 	modified:   cpp/src/convert_sorted_array_to_binary_searcht_tree.cpp 	modified:   cpp/src/convert_sorted_list_to_binary_searcht_tree.cpp 	modified:   cpp/src/copy_list_with_random_pointer.cpp 	modified:   cpp/src/count_of_smaller_numbers_after_self.cpp 	modified:   cpp/src/decode_ways.cpp 	modified:   cpp/src/distinct_subsequences.cpp 	new file:   cpp/src/find_words_that_can_be_formed_by_characters.cpp 	modified:   cpp/src/flatten_binary_tree_to_linked_list.cpp 	modified:   cpp/src/gas_station.cpp 	modified:   cpp/src/gray_code.cpp 	modified:   cpp/src/implement_magic_dictionary.cpp 	modified:   cpp/src/insertion_sort_list.cpp 	modified:   cpp/src/interleaving_string.cpp 	modified:   cpp/src/largest_rectangle_in_histogram.cpp 	modified:   cpp/src/last_stone_weight.cpp 	new file:   cpp/src/leetcode.cpp 	new file:   cpp/src/leetcode.h 	new file:   cpp/src/leetcode_test.cpp 	modified:   cpp/src/linked_list_cycle.cpp 	modified:   cpp/src/linked_list_cycle_2.cpp 	modified:   cpp/src/longest_consecutive_sequence.cpp 	modified:   cpp/src/maximal_re

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -10,14 +10,14 @@ SOURCES	= $(wildcard ./src/*.cpp)
 OBJ	= $(SOURCES:./src/%.cpp=./build/%.o)
 DEP	= $(OBJ:%.o=%.d)
 
-X_OBJ	= $(filter-out ./build/utils.o, $(OBJ))
+X_OBJ	= $(filter-out ./build/leetcode.o, $(OBJ))
 X_FIL	= $(X_OBJ:%.o=%.x)
 
 VALGRIND	= valgrind
 
 
 .PHONY: all
-all:./build ./build/libutils.so $(X_FIL)
+all:./build ./build/libleetcode.so $(X_FIL)
 
 -include $(DEP)
 
@@ -26,13 +26,13 @@ all:./build ./build/libutils.so $(X_FIL)
 	@echo -e "\033[0;33m*\033[0m $@"
 	@$(CC) $(CFLAGS) -MMD $< -o $@
 
-./build/%.x: ./build/%.o
+./build/%.x: ./build/%.o ./build/libleetcode.so
 	@echo -e "\033[0;33m*\033[0m $@"
-	@$(CC) $< -o $@ -L./build -lutils -Wl,-R./build
+	@$(CC) $< -o $@ -L./build -lleetcode -Wl,-R./build
 
-./build/libutils.so:./build/utils.o
+./build/libleetcode.so: ./build/leetcode.o
 	@echo -e "\033[0;33m*\033[0m $@"
-	@$(CC) -shared -Wl,-soname,libutils.so $< -o $@
+	@$(CC) -shared -Wl,-soname,libleetcode.so $< -o $@
 
 ./build:
 	@[ -d $@ ] || mkdir $@
